# sprintboard

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  index.html  package-lock.json  package.json  server_configs.json  vcpkg.json  vite.config.ts
cpp/src/auxiliary/include/sung/auxiliary/: filesys.hpp  path.hpp  server_configs.hpp
cpp/src/auxiliary/src/: comfyui_prompt.cpp  filesys.cpp  server_configs.cpp
cpp/src/image/: CMakeLists.txt
cpp/src/image/include/sung/image/: img_info.hpp
cpp/src/image/src/: avif.cpp  img_info.cpp  png.cpp
cpp/src/server/: CMakeLists.txt
cpp/src/server/src/: image_query.hpp  main.cpp  source_image.cpp  source_image.hpp
cpp/src/server/src/index/: image_index.cpp  image_index.hpp
cpp/src/server/src/response/: img_details.cpp  img_list.cpp  img_list.hpp
cpp/src/server/src/task/: img_walker.cpp
cpp/src/server/src/util/: task.cpp  task.hpp  wake.cpp  wake.hpp
cpp/test/: avif.cpp  png.cpp
cpp/tests/: CMakeLists.txt  avif.cpp  filesys.cpp  image_index.cpp  img_list.cpp  png.cpp  server_configs.cpp  source_image.cpp
doc/img/: IMG_6690.avif  IMG_6691.avif  IMG_6693.avif  IMG_6695.avif  IMG_6696.avif  IMG_6697.avif  IMG_6700.avif
docs/images/: IMG_6695.avif  IMG_6697.avif
fixtures/images/: Émilie.avif
script/: avif_xmp_fix.py
scripts/: avif_xmp_fix.py
src/: App.tsx  Dashboard.tsx  Gallery.tsx  index.css
src/func/: ViewerSetings.tsx  downloadImage.ts
src/pages/: Dashboard.tsx  Gallery.tsx  ImageDetails.tsx
src/widgets/: Breadcrumbs.tsx  FolderCard.tsx  GalleryDrawer.tsx
src_cpp/: CMakeLists.txt
src_cpp/auxiliary/: CMakeLists.txt
src_cpp/auxiliary/include/sung/auxiliary/: comfyui_prompt.hpp  comfyui_workflow.hpp  err_str.hpp  filesys.hpp  path.hpp  server_configs.hpp
src_cpp/auxiliary/src/: comfyui_data.cpp  comfyui_prompt.cpp  comfyui_workflow.cpp  filesys.cpp  path.cpp  server_configs.cpp
src_cpp/image/: CMakeLists.txt
src_cpp/image/include/sung/image/: avif.hpp  img_info.hpp  png.hpp  simple_img_info.hpp
src_cpp/image/src/: avif.cpp  img_info.cpp  png.cpp  simple_img_info.cpp
src_cpp/server/: CMakeLists.txt
src_cpp/server/src/: main.cpp
src_cpp/server/src/response/: img_details.cpp  img_details.hpp  img_list.cpp  img_list.hpp
src_cpp/server/src/task/: img_walker.cpp  img_walker.hpp
src_cpp/server/src/util/: comfyui_util.cpp  comfyui_util.hpp  path.hpp  png.cpp  png.hpp  server_configs.cpp  server_configs.hpp  simple_img_info.cpp  simple_img_info.hpp  task.cpp  task.hpp  wake.cpp  wake.hpp
test_cpp/: CMakeLists.txt  avif.cpp  png.cpp
test_cpp/images/: .gitignore  Émilie.avif
